Fix wrapping of long register titles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -256,6 +256,10 @@ table {
     margin-bottom: 0;
   }
 
+  a {
+    white-space: normal;
+  }
+
   tbody td:before {
     content: none;
   }
